<resources>
    <string name="app_name">Micro Chess</string>
    <string name="username">Username</string>
    <string name="play">Play</string>
    <string name="how_to">How to play?</string>
    <string name="choose">Choose</string>
    <string name="board">Board</string>

    <string name="b_b">Black Bishop</string>
    <string name="b_k">Black King</string>
    <string name="b_n">Black Knight</string>
    <string name="b_p">Black Pawn</string>
    <string name="b_q">Black Queen</string>
    <string name="b_r">Black Rook</string>

    <string name="w_b">Black Bishop</string>
    <string name="w_k">Black King</string>
    <string name="w_n">Black Knight</string>
    <string name="w_p">Black Pawn</string>
    <string name="w_q">Black Queen</string>
    <string name="w_r">White Rook</string>

    <string name="wifi_label">Wifi: not connected</string>
    <string name="username_label">Username: username</string>
    <string name="games">Games</string>
    <string name="players_online">Players online</string>

    <string name="vs">vs</string>
    <string name="challenge">Challenge</string>

    <string name="score">+4.3</string>
    <string name="my_name">emz2</string>
    <string name="opponent_name">goranoff</string>
    <string name="story">c2 a7 kb3 qg7…</string>
    <string name="resign">Resign</string>
    <string name="offer_draw">Draw</string>
    <string name="take_back">Take Back</string>
    <string name="game_history">Game History</string>
    <string name="exit">Exit</string>

    <string name="past_games">Past Games</string>
    <string name="past_game">Past Game</string>
    <string name="default_date">10/12/2020</string>
    <string name="delete">Delete</string>
</resources>